fix(build) downgrade to java 8